--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Padauk&display=swap');
+
+body{
+  background: #23252C;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  font-family: 'Inter', sans-serif;}
+
+.main-content{
+  
+
+  background: #1A1B21;
+  width: 400px;
+  margin: 0 auto;
+  height: 800px;
+
+   
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img{
+  max-width:100%;
+}
+
+.footer{
+  height: 64px;
+  background: #161619;
+  font-size: 32px;
+  color:#918E9B;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.bio{
+
+padding: 10px;
+
+}
+
+.icon{
+  padding-left: 10px;
+}
+
+h1.name{
+  font-style: normal;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 30px;
+  color: #FFFFFF;
+}
+
+.occupation{
+  
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 15px;
+  text-align: center;
+  color:#F3BF99;
+
+}
+
+a.github-link{
+
+display: block;
+text-decoration: none;
+font-size: 16px;
+text-align: center;
+color: #F5F5F5;
+
+}
+
+a.github-link:hover{
+  color: #F3BF99;
+}
+
+.icons{
+ 
+ text-align: center;
+ margin-top: 20px;
+  
+}
+
+button{
+  padding: 9px 13px 9px 11px;
+  max-width: 200px;
+}
+
+.wrap{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: #23252C;
+}
+
+span{
+  margin-left: 10px;
+}
+
+.about{
+  padding: 10px 10px;
+  
+  
+}
+
+h3{
+  color: #F5F5F5;
+}
+
+p.content
+{
+  color: #DCDCDC;
+
+}
+
+
+
+@media only screen and (max-width: 600px){
+  .main-content{
+  
+
+    background: #1A1B21;
+    width: 360px;
+    margin: 0 auto;
+    height: 700px;
+  
+     
+  }
+
+
+
 }
